# text-game-webui

./: .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  main.py  settings.py
app/api/: routes.py  themes.py  ws.py
app/media/: comfyui_client.py  diffusers_client.py  diffusers_daemon.py  dtm_media_port.py  gpu_orchestrator.py  image_cache.py  media_port.py
app/realtime/: hub.py
app/services/: dtm_link_auth.py  engine_gateway.py  gateway_factory.py  schemas.py  tge_gateway.py  theme_service.py
app/static/css/: app.css  tokens.css
app/static/js/: app.js
app/templates/: base.html  index.html
app/templates/partials/: feature_list.html
app/ui/: __init__.py  routes.py
docs/: architecture.md  backends.md  feature-matrix.md  testing.md
tests/backend/: conftest.py  test_campaign_api.py  test_empty_response_retry.py  test_gateway_factory.py  test_health.py  test_image_api.py  test_realtime_publish.py  test_tge_gateway_optional.py  test_theme_api.py  test_theme_service.py  test_ui_index.py  test_untested_endpoints.py
tests/frontend/: jest.config.cjs  package-lock.json  package.json  tsconfig.json
tests/frontend/flows/: calendar_flow.test.ts  campaign_creation_docs_flow.test.ts  campaign_export_flow.test.ts  campaign_flags_flow.test.ts  campaign_rules_flow.test.ts  dm_notification_flow.test.ts  dtm_image_flow.test.ts  infinite_scroll_flow.test.ts  media_avatar_flow.test.ts  memory_drilldown_flow.test.ts  memory_flow.test.ts  persona_flow.test.ts  player_progression_flow.test.ts  puzzle_minigame_flow.test.ts  rewind_stream_flow.test.ts  (+14 more)
(+2 files in other folders)
