[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-game-webui"
version = "0.1.0"
description = "FastAPI + HTMX web UI for text-game-engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "text-game-webui contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.4",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/**/*.html", "static/css/*.css", "static/js/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests/backend"]
